# momentloop

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  azure.yaml  docker-compose.yml
.claude/: skill-creator
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_move_style_to_project.py  003_add_styled_variants.py  004_add_google_tokens.py  005_add_style_prompt.py  006_add_video_is_selected.py  007_add_prompt_generation_status.py  008_add_export_progress_tracking.py  009_add_export_is_main.py  010_add_jobs_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  export.py  google_photos.py  jobs.py  photos.py  projects.py  storage_proxy.py  styles.py  videos.py  websocket.py
backend/app/core/: concurrency.py  config.py  database.py  logging.py  rate_limit.py  retry.py  security.py  stuck_jobs.py  ws_manager.py
backend/app/models/: job.py  photo.py  project.py  styled_variant.py  user.py  video.py
backend/app/schemas/: export.py  job.py  pagination.py  photo.py  project.py  user.py  video.py
backend/app/services/: azure_storage.py  cleanup.py  fal_ai.py  ffmpeg.py  imagen.py  prompt_generator.py  storage.py
backend/app/types/: index.py
backend/tests/: conftest.py  test_auth.py  test_azure_storage.py  test_config.py  test_health.py  test_projects.py  test_storage.py
docs/: ARCHITECTURE.md
docs/plans/: 2025-02-19-azure-infra-design.md  2025-02-19-azure-infra-implementation.md
frontend/: Dockerfile.prod  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
infra/: abbreviations.json  main.bicep  main.bicepparam
(+35 files in other folders)
